--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "feature": "nx generate @solana-developers/preset-react:feature",
     "build": "nx build web",
     "dev": "nx serve web",
-    "demo": "npx ts-node -P web/tsconfig.json -r tsconfig-paths/register"
+    "demo": "npx ts-node -P web/tsconfig.json -r tsconfig-paths/register",
+    "start": "cd dist/web && next start -p 3000 -H 0.0.0.0"
   },
   "private": true,
   "dependencies": {
